0x01-variables_if_else_while/1-last_digit.c:
st_digit.c:23:2: error: ISO C90 forbids mixed declarations and code [-Werror=declaration-after-statement]
   23 |  int lastDigit = n % 10;
      |  ^~~
cc1: all warnings being treated as errors
